Get rid of mathjax and logo as math.

--- a/CampHog/templates/default.html
+++ b/CampHog/templates/default.html
@@ -7,13 +7,12 @@
         <link rel="stylesheet" type="text/css" href="/css/bootswatch-readable.css" />
         <link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
         <link rel="stylesheet" type="text/css" href="/css/pandoc.css" />
-        <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_HTMLorMML-full" />
     </head>
     <body>
         <div class="container">
             <div class="well">
                 <div class="row-fluid">
-                    <div class="span4"><a style="color:inherit" href="/"><h1>`{"block" / "scope"}`</h1></a></div>
+                    <div class="span4"><a style="color:inherit" href="/"><h1>block/scope</h1></a></div>
                     <div class="span8">
                         <p>
                             <ul>
