--- a/CampHog/templates/default.html
+++ b/CampHog/templates/default.html
@@ -3,13 +3,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>BlockScope - $title$</title>
-        <link rel="stylesheet" type="text/css" href="/css/default.css" />
-        <link rel="stylesheet" type="text/css" href="/css/bootswatch-readable.css" />
-        <link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
-        <link rel="stylesheet" type="text/css" href="/css/pandoc.css" />
+        <link rel="stylesheet" href="/css/styles.css" >
     </head>
     <body>
         <div class="container">
+            <img src="images/WedgieAttackAvatar.JPG"></img>
             <div class="well">
                 <div class="row-fluid">
                     <div class="span4"><a style="color:inherit" href="/"><h1>block/scope</h1></a></div>
@@ -23,15 +21,18 @@
                     </div>
                 </div>
             </div>
-            <div class="navbar">
-                <div class="navbar-inner">
-                    <ul class="nav">
-                        <li><a href="/about.html">About</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
-                        <li><a href="/archive.html">Archive</a></li>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/archive.html">Archive</a></li>
                     </ul>
                 </div>
-            </div>
+            </nav>
             <div id="content">
                 <h1>$title$</h1>
                 $body$
@@ -42,4 +43,5 @@
             </footer>
         </div>
     </body>
+    <script language="javascript" src="/css/app.js" defer></script>
 </html>
