--- a/site.sass
+++ b/site.sass
@@ -2,6 +2,7 @@
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
 @import "~bootstrap/scss/bootstrap";
+@import "pandoc-solarized.css";
 
 html
     font-size: 12pt;
