Add tufte-css, tufte-pandoc-css & et-book. Set max-width.

--- a/CampHog/templates/post.html
+++ b/CampHog/templates/post.html
@@ -1,3 +1,5 @@
-$body$
-
-<div class="info">&copy; $date$ Phil de Joux</div>
+<article>
+    <h1>$title$</h1>
+    $body$
+    <div class="info">&copy; $date$ Phil de Joux</div>
+</article>
