Update the layout with a LHS sidebar brief main menu.

--- a/CampHog/templates/post.html
+++ b/CampHog/templates/post.html
@@ -1,5 +1,5 @@
 <article>
     <h1>$title$</h1>
     $body$
-    <div class="info">&copy; $date$ Phil de Joux</div>
+    <div class="info">&copy; 2013-2018 Block Scope</div>
 </article>
