--- a/CampHog/templates/default.html
+++ b/CampHog/templates/default.html
@@ -6,35 +6,22 @@
         <link rel="stylesheet" href="/css/styles.css" >
     </head>
     <body>
-        <div class="container">
-            <img src="images/WedgieAttackAvatar.JPG"></img>
-            <div class="well">
-                <div class="row-fluid">
-                    <div class="span4"><a style="color:inherit" href="/"><h1>block/scope</h1></a></div>
-                    <div class="span8">
-                        <p>
-                            <ul>
-                                <li>[blok] le <a href="http://fr.wikipedia.org/wiki/Bloc_(escalade)" target="_blank">bloc</a> est un type d'escalade</li>
-                                <li>[skohp] a <a href="http://en.wikipedia.org/wiki/Scope_(computer_science)" target="_blank">scope</a> is a context within a computer program</li>
-                            </ul>
-                        </p>
+        <div class="container-fluid">
+            <div class="row">
+                <div id="side" class="col-4 card">
+                    <div class="card-body">
+                        <h1 class="card-title"><a href="/">Block Scope</a></h1>
+                        <p class="card-text">A projection of corporation and self.</p>
+                        <nav class="nav">
+                            <a class="nav-link" href="/about.html">Company</a>
+                            <a class="nav-link" href="/contact.html">Individual</a>
+                            <a class="nav-link" href="/archive.html">Posts</a>
+                        </nav>
                     </div>
                 </div>
-            </div>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/archive.html">Archive</a></li>
-                    </ul>
+                <div id="content" class="col-6">
+                    $body$
                 </div>
-            </nav>
-            <div id="content">
-                $body$
             </div>
             <footer class="footer">
                 <div class="container">
