--- a/site.sass
+++ b/site.sass
@@ -9,14 +9,18 @@ $body-bg: #fffff8;
 
 body
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
-    margin-left: 11.5rem;
-    margin-right: 2.5rem;
-
-.container
-  max-width: 780px;
+    margin: 2.5rem;
 
 .spacer
     height: 20px;
 
 .box span.tag
     border-radius: 0;
+
+.card-title a
+    text-decoration: none;
+    color: #000;
+
+#side
+    background-color: inherit;
+    border: inherit;
