Remove footer, I'm not using one.

--- a/CampHog/templates/default.html
+++ b/CampHog/templates/default.html
@@ -9,14 +9,10 @@
         <div class="container-fluid">
             <div class="row">
                 $partial("templates/nav.html")$
-                <div id="content" class="col-6">
+                <div class="col-6">
                     $body$
                 </div>
             </div>
-            <footer class="footer">
-                <div class="container">
-                </div>
-            </footer>
         </div>
     </body>
     <script language="javascript" src="/css/app.js" defer></script>
