--- a/CampHog/templates/post.html
+++ b/CampHog/templates/post.html
@@ -1,5 +1,8 @@
 <article>
     <h1>$title$</h1>
+    $if(tags)$
+        Tags: $tags$
+    $endif$
     $body$
     <div class="info">&copy; 2013-2018 Block Scope</div>
 </article>
