--- a/CampHog/templates/tag.html
+++ b/CampHog/templates/tag.html
@@ -1,1 +1,6 @@
-$partial("templates/post-list.html")$
+<article>
+<header>
+    <h1>$title$</h1>
+</header>
+    $partial("templates/post-list.html")$
+</article>
