--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -1,17 +1,4 @@
----
-title: Contact
----
-
 <div class="row">
-<div class="col-5">
-<address>
-  <strong>Block Scope Limited</strong><br/>
-  638C Woodfields Rd<br/>
-  Cust<br/>
-  Canterbury 7475<br/>
-  NEW ZEALAND<br/>
-</address>
-</div> 
 <div class="col-5">
 <address>
   <strong>Phil de Joux</strong><br/>
@@ -19,7 +6,11 @@ title: Contact
   Val-David<br/>
   Quebec J0T 2N0<br/>
   CANADA<br/>
-  <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
+</address>
+</div> 
+<div class="col-5">
+<address>
+  <i class="fa fa-envelope"></i><a href="mailto:philderbeast@gmail.com"> philderbeast@gmail.com</a><br/>
   <i class="fa fa-phone"></i> +1-405-675-9180<br/>
   <i class="fa fa-skype"></i> philderbeast<br/>
 </address>
@@ -27,6 +18,8 @@ title: Contact
 <div class="col-2">
   <i class="fa fa-github"></i>
   <a href="https://github.com/philderbeast" target="_blank">github</a><br/>
+  <i class="fa fa-gitlab"></i>
+  <a href="https://gitlab.com/philderbeast" target="_blank">gitlab</a><br/>
   <i class="fa fa-bitbucket"></i>
   <a href="https://bitbucket.org/philderbeast" target="_blank">bitbucket</a><br/>
   <i class="fa fa-twitter"></i>
