--- a/CampHog/templates/nav.html
+++ b/CampHog/templates/nav.html
@@ -3,9 +3,10 @@
         <h1 class="card-title"><a href="/">Block Scope</a></h1>
         <p class="card-text">A projection of corporation and self.</p>
         <nav class="nav">
-            <a class="nav-link" href="/about.html">Company</a>
-            <a class="nav-link" href="/contact.html">Individual</a>
+            <a class="nav-link" href="/b/about.html">Company</a>
+            <a class="nav-link" href="/p/about.html">Individual</a>
             <a class="nav-link" href="/archive.html">Posts</a>
         </nav>
+        <div class="info">&copy; 2013-2018 Block Scope</div>
     </div>
 </div>
