--- a/CampHog/templates/nav.html
+++ b/CampHog/templates/nav.html
@@ -1,6 +1,6 @@
 <div id="side" class="col-4 card">
     <div class="card-body">
-        <h1 class="card-title"><a href="/">Block Scope</a></h1>
+        <h1 class="card-title"><a href="/">Camp Hog</a></h1>
         <p class="card-text">A projection of corporation and self.</p>
         <nav class="nav">
             <a class="nav-link" href="/b/about.html">Company</a>
