--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -10,7 +10,7 @@
 </div> 
 <div class="col-5">
 <address>
-  <i class="fa fa-envelope"></i><a href="mailto:philderbeast@gmail.com"> philderbeast@gmail.com</a><br/>
+  <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
   <i class="fa fa-phone"></i> +1-405-675-9180<br/>
   <i class="fa fa-skype"></i> philderbeast<br/>
 </address>
