--- a/CampHog/templates/philderbeast.html
+++ b/CampHog/templates/philderbeast.html
@@ -8,7 +8,9 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                $partial("templates/nav.html")$
+                <div id="side" class="col-4 card">
+                    $partial("templates/nav.html")$
+                </div>
                 <div class="col-6">
                     $body$
                     <hr/>
