Remove g+ and facebook. Add stack overflow developer story.

--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div class="col-5">
+<div class="col-4">
 <address>
   <strong>Phil de Joux</strong><br/>
   1425 chemin de la Rivière<br/>
@@ -15,16 +15,13 @@
   <i class="fa fa-skype"></i> philderbeast<br/>
 </address>
 </div> 
-<div class="col-2">
+<div class="col-3">
   <i class="fa fa-github"></i>
   <a href="https://github.com/philderbeast" target="_blank">github</a><br/>
   <i class="fa fa-twitter"></i>
   <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br/>
   <i class="fa fa-linkedin"></i>
   <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br/>
-  <i class="fa fa-google-plus"></i>
-  <a href="https://plus.google.com/110940964100348607306/about" target="_blank">plus</a><br/>
-  <i class="fa fa-facebook"></i>
-  <a href="http://www.facebook.com/phil.dejoux"
-  target="_blank">facebook</a><br/>
+  <i class="fa fa-stack-overflow"></i>
+  <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br/>
 </div>
