--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -24,4 +24,6 @@
   <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br/>
   <i class="fa fa-stack-overflow"></i>
   <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br/>
+  <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
+  <a href="https://hackage.haskell.org/user/philderbeast" target="_blank">hackage</a><br/>
 </div>
