Add color to the skype icon.

--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -12,7 +12,7 @@
 <address>
   <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
   <i class="fa fa-phone"></i> +1-450-675-9180<br/>
-  <i class="fa fa-skype"></i> philderbeast<br/>
+  <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br/>
 </address>
 </div> 
 <div class="col-3">
