Add color to the linkedin icon.

--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -20,7 +20,7 @@
   <a href="https://github.com/philderbeast" target="_blank">github</a><br/>
   <i class="fa fa-twitter"></i>
   <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br/>
-  <i class="fa fa-linkedin"></i>
+  <i style="color:#0077b5" class="fa fa-linkedin"></i>
   <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br/>
   <i style="color:#f48024" class="fa fa-stack-overflow"></i>
   <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br/>
