Add color to the twitter icon.

--- a/CampHog/templates/philderbeast-contact.html
+++ b/CampHog/templates/philderbeast-contact.html
@@ -18,7 +18,7 @@
 <div class="col-3">
   <i class="fa fa-github"></i>
   <a href="https://github.com/philderbeast" target="_blank">github</a><br/>
-  <i class="fa fa-twitter"></i>
+  <i style="color:#1da1f2" class="fa fa-twitter"></i>
   <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br/>
   <i style="color:#0077b5" class="fa fa-linkedin"></i>
   <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br/>
