Use the B612 Mono font.

--- a/site.sass
+++ b/site.sass
@@ -3,12 +3,13 @@ $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
 @import "pandoc-solarized.css";
 @import "~et-book/et-book.css";
+@import url('https://fonts.googleapis.com/css?family=B612|B612+Mono&display=swap');
 
 $body-bg: #fffff8;
 @import "~bootstrap/scss/bootstrap";
 
 body
-    font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+    font-family: 'B612 Mono', monospace;
     margin: 2.5rem;
 
 .spacer
