--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -2,12 +2,9 @@
     $partial("templates/banner.html")$
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" href="/b">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/archive.html">Blog</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="/archive.html">Blog</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/b">About @blockscope</a></li>
+            <li class="nav-item"><a class="nav-link active" href="/p">About @philderbeast</a></li>
         </ul>
     </nav>
 </div>
