Just keep the curlies and ellipsis.

--- a/www-hakyll/templates/banner.html
+++ b/www-hakyll/templates/banner.html
@@ -1,2 +1,1 @@
-<h1 class="card-title"><a href="/">{Block Scope}</a></h1>
-<p class="card-text">with curlies but I prefer indents</p>
+<h1 class="card-title"><a href="/">{...}</a></h1>
