--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -3,7 +3,7 @@
     <nav>
         <ul class="nav flex-column">
             <li class="nav-item"><a class="nav-link" href="/archive.html">self-hosted posts</a></li>
-            <li class="nav-item"><a class="nav-link" href="/tweet">tweetledee and tweetledumb</a></li>
+            <li class="nav-item"><a class="nav-link" href="/tweet">reflected tweets</a></li>
             <li class="nav-item"><a class="nav-link" href="/b">@blockscope</a></li>
             <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
         </ul>
