--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -5,6 +5,7 @@
             <li class="nav-item"><a class="nav-link" href="/archive.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="/tweet">tweet</a></li>
             <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="/cv">cv</a></li>
             <li class="nav-item"><a class="nav-link" href="/b">@blockscope</a></li>
         </ul>
     </nav>
