Reuse contact details in footer.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -13,6 +13,10 @@
                 </div>
                 <div class="col-9">
                     $body$
+                    <hr/>
+                    <footer>
+                        $partial("templates/philderbeast-contact.html")$
+                    </footer>
                 </div>
             </div>
         </div>
