--- a/site.sass
+++ b/site.sass
@@ -28,3 +28,11 @@ body
 
 #side > .card-body
     padding-top: 0;
+
+@media print
+    body
+        font-size: 1em;
+        margin-top: 2cm;
+        margin-right: 2cm;
+        margin-bottom: 1.5cm;
+        margin-left: 2cm
