--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div id="side" class="col-3 card">
+                <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
                 </div>
                 <div class="col-9">
