--- a/www-hakyll/templates/philderbeast-contact.html
+++ b/www-hakyll/templates/philderbeast-contact.html
@@ -1,27 +1,29 @@
 <div class="row">
 <div class="col-6">
 <address>
-  <strong>Phil de Joux</strong><br/>
-  1425 chemin de la Rivière<br/>
-  Val-David<br/>
-  Quebec J0T 2N0<br/>
-  CANADA<br/>
+    <strong>Phil de Joux</strong><br/>
+    1425 chemin de la Rivière<br/>
+    Val-David<br/>
+    Quebec J0T 2N0<br/>
+    CANADA<br/>
 </address>
-</div> 
+</div>
 <div class="col-6">
-  <address>
-    <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
-    <i class="fa fa-phone"></i> +1-450-675-9180<br/>
-    <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br/>
-  </address>
-  <i class="fa fa-github"></i>
-  <a href="https://github.com/philderbeast" target="_blank">github</a><br/>
-  <i style="color:#1da1f2" class="fa fa-twitter"></i>
-  <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br/>
-  <i style="color:#0077b5" class="fa fa-linkedin"></i>
-  <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br/>
-  <i style="color:#f48024" class="fa fa-stack-overflow"></i>
-  <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br/>
-  <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
-  <a href="https://hackage.haskell.org/user/philderbeast" target="_blank">hackage</a><br/>
+    <address>
+        <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br/>
+        <i class="fa fa-phone"></i> +1-450-675-9180<br/>
+        <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br/>
+    </address>
+    <div class="d-print-none">
+        <i class="fa fa-github"></i>
+        <a href="https://github.com/philderbeast" target="_blank">github</a><br/>
+        <i style="color:#1da1f2" class="fa fa-twitter"></i>
+        <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br/>
+        <i style="color:#0077b5" class="fa fa-linkedin"></i>
+        <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br/>
+        <i style="color:#f48024" class="fa fa-stack-overflow"></i>
+        <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br/>
+        <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
+        <a href="https://hackage.haskell.org/user/philderbeast" target="_blank">hackage</a><br/>
+    </div>
 </div>
