--- a/www-hakyll/templates/default.html
+++ b/www-hakyll/templates/default.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>BlockScope - $title$</title>
+        <title>$title$</title>
         <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+        $partial("templates/favicon.html")$
     </head>
     <body>
         <div class="container-fluid">
