Add path to github link text.

--- a/www-hakyll/templates/blockscope-contact.html
+++ b/www-hakyll/templates/blockscope-contact.html
@@ -14,5 +14,5 @@
     <i class="fa fa-phone"></i> +1-450-675-9180<br/>
   </address>
   <i class="fa fa-github"></i>
-  <a href="https://github.com/blockscope" target="_blank">github</a><br/>
+  <a href="https://github.com/blockscope" target="_blank">github/blockscope</a><br/>
 </div>
