--- a/www-hakyll/templates/project.html
+++ b/www-hakyll/templates/project.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>CV - $title$</title>
+        <title>$title$</title>
         <link rel="stylesheet" href="/css/styles.css" >
         $partial("templates/favicon.html")$
     </head>
