--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -2,12 +2,12 @@
     $partial("templates/banner.html")$
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="/archive.html">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="/tweet">tweet</a></li>
-            <li class="nav-item"><a class="nav-link" href="/project">projects</a></li>
-            <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
-            <li class="nav-item"><a class="nav-link" href="/cv">cv</a></li>
             <li class="nav-item"><a class="nav-link" href="/b">@blockscope</a></li>
+            <li class="nav-item"><a class="nav-link" href="/project">projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="/archive.html">posts</a></li>
+            <li class="nav-item"><a class="nav-link" href="/tweet">tweets</a></li>
+            <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="/cv">worker threads</a></li>
         </ul>
     </nav>
 </div>
