--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -6,6 +6,7 @@
             <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
             <li class="nav-item"><a class="nav-link" href="/cv">worker threads</a></li>
             <li class="nav-item"><a class="nav-link" href="/project">projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="/contrib">supporting acts</a></li>
             <li class="nav-item"><a class="nav-link" href="/archive.html">posts</a></li>
             <li class="nav-item"><a class="nav-link" href="/tweet">tweets</a></li>
         </ul>
