Set options for background color and font on the chart.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -75,7 +75,15 @@
                         ]
                     ]);
 
-                chart.draw(dataTable);
+                var options = {
+                    backgroundColor: '#fffff8',
+                    timeline: {
+                        rowLabelStyle: { fontName: 'monospace', fontSize: 10 },
+                        barLabelStyle: { fontName: 'monospace', fontSize: 10 }
+                    }
+                };
+
+                chart.draw(dataTable, options);
             }
         </script>
     </head>
