Remove unneeded options for hAxis.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -81,11 +81,7 @@
                         rowLabelStyle: { fontName: 'monospace', fontSize: 10 },
                         barLabelStyle: { fontName: 'monospace', fontSize: 10 }
                     },
-                    hAxis: {
-                        format: 'yyyy',
-                        minValue: new Date(1995, 1),
-                        maxValue: Date.now()
-                    },
+                    hAxis: { maxValue: Date.now() },
                 };
 
                 chart.draw(dataTable, options);
