Add a row for flare timing.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -20,7 +20,11 @@
                 dataTable.addColumn({ type: 'date', id: 'End' });
 
                 dataTable.addRows([
-                        [ 'Aqualinc'
+                        [ 'Flare Timing'
+                        , new Date(2017,  5)
+                        , new Date(2019, 10)
+                        ]
+                    ,   [ 'Aqualinc'
                         , new Date(2014, 2)
                         , new Date(2017, 4)
                         ]
