--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -21,8 +21,18 @@
 
                 dataTable.addRows([
                         [ 'Flare Timing'
-                        , new Date(2017,  5)
-                        , new Date(2019, 10)
+                        , new Date(2017,  5,  1)
+                        , new Date(2017,  9,  8)
+                        ]
+                    ,
+                        [ 'Flare Timing'
+                        , new Date(2017, 10,  5)
+                        , new Date(2019,  9,  7)
+                        ]
+                    ,
+                        [ 'Flare Timing'
+                        , new Date(2019, 10,  7)
+                        , new Date(2019, 11)
                         ]
                     ,   [ 'Aqualinc'
                         , new Date(2014, 2)
@@ -34,8 +44,53 @@
                         ]
                     ,
                         [ 'Travieo'
-                        , new Date(2011,  4)
-                        , new Date(2012,  4)
+                        , new Date(2011,  8, 12)
+                        , new Date(2011,  9,  6)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2011,  9, 29)
+                        , new Date(2011, 10, 29)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2012,  5, 10)
+                        , new Date(2012,  5, 17)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2012,  9, 21)
+                        , new Date(2012, 10, 28)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2013,   1, 13)
+                        , new Date(2013,   3, 21)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2013,   5,  1)
+                        , new Date(2013,  12,  8)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2014,   2, 13)
+                        , new Date(2014,   2, 25)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2014,   3, 24)
+                        , new Date(2014,   6,  3)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2015,   2, 13)
+                        , new Date(2015,   4, 27)
+                        ]
+                    ,
+                        [ 'Travieo'
+                        , new Date(2015,   7, 19)
+                        , new Date(2015,  10, 11)
                         ]
                     ,
                         [ 'CropLogic'
