Add time segments for Waimakariri.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -99,8 +99,48 @@
                         ]
                     ,
                         [ "Waimakariri"
-                        , new Date(2007, 12)
-                        , new Date(2010,  4)
+                        , new Date(2007, 12, 12)
+                        , new Date(2007, 12, 28)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2008,  1, 15)
+                        , new Date(2008,  3, 31)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2008,  7, 29)
+                        , new Date(2008,  9, 25)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2008, 12, 22)
+                        , new Date(2008, 12, 31)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2009,  1,  7)
+                        , new Date(2009,  3, 15)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2009,  5, 28)
+                        , new Date(2009,  7, 10)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2009, 11,  3)
+                        , new Date(2009, 12, 11)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2010,  1, 14)
+                        , new Date(2010,  5, 17)
+                        ]
+                    ,
+                        [ "Waimakariri"
+                        , new Date(2011,  3,  5)
+                        , new Date(2011,  4,  7)
                         ]
                     ,
                         [ 'NutriCentre'
