Add NIWA time segments.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -149,8 +149,13 @@
                         ]
                     ,
                         [ 'NIWA'
-                        , new Date(2003,  6)
-                        , new Date(2007,  7)
+                        , new Date(2003,  6, 23)
+                        , new Date(2006,  7, 10)
+                        ]
+                    ,
+                        [ 'NIWA'
+                        , new Date(2007,  5, 16)
+                        , new Date(2007,  7, 13)
                         ]
                     ,
                         [ 'Aspelle'
