Add time segments for CropLogic.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -94,8 +94,23 @@
                         ]
                     ,
                         [ 'CropLogic'
-                        , new Date(2008,  2)
-                        , new Date(2011,  9)
+                        , new Date(2008,  1,  8)
+                        , new Date(2008,  6, 20)
+                        ]
+                    ,
+                        [ 'CropLogic'
+                        , new Date(2008,  7, 14)
+                        , new Date(2008,  9, 26)
+                        ]
+                    ,
+                        [ 'CropLogic'
+                        , new Date(2008, 10, 24)
+                        , new Date(2010,  4, 21)
+                        ]
+                    ,
+                        [ 'CropLogic'
+                        , new Date(2010,  6,  6)
+                        , new Date(2011,  8, 27)
                         ]
                     ,
                         [ "Waimakariri"
