--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -35,8 +35,32 @@
                         , new Date(2019, 11)
                         ]
                     ,   [ 'Aqualinc'
-                        , new Date(2014, 2)
-                        , new Date(2017, 4)
+                        , new Date(2014,  2, 18)
+                        , new Date(2014,  2, 25)
+                        ]
+                    ,   [ 'Aqualinc'
+                        , new Date(2014,  4,  4)
+                        , new Date(2015,  3,  3)
+                        ]
+                    ,   [ 'Aqualinc'
+                        , new Date(2015,  4, 10)
+                        , new Date(2015,  5,  6)
+                        ]
+                    ,   [ 'Aqualinc'
+                        , new Date(2015,  6, 19)
+                        , new Date(2015,  9,  8)
+                        ]
+                    ,   [ 'Aqualinc'
+                        , new Date(2015, 10, 12)
+                        , new Date(2016,  5,  8)
+                        ]
+                    ,   [ 'Aqualinc'
+                        , new Date(2016,  6,  8)
+                        , new Date(2016,  8,  4)
+                        ]
+                    ,   [ 'Aqualinc'
+                        , new Date(2016,  9,  9)
+                        , new Date(2017,  4, 19)
                         ]
                     ,   [ 'Tagly'
                         , new Date(2012,  7)
