Color the list bullets and put the chart before the list.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -235,7 +235,8 @@
                     hAxis: { maxValue: Date.now() },
                     // SEE: http://colorbrewer2.org/#type=qualitative&scheme=Paired&n=12
                     colors: [
-                          '#a6cee3'
+                          '#b15928'
+                        , '#a6cee3'
                         , '#1f78b4'
                         , '#b2df8a'
                         , '#33a02c'
