--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -7,7 +7,7 @@
             <li class="nav-item"><a class="nav-link" href="/cv">worker threads</a></li>
             <li class="nav-item"><a class="nav-link" href="/project">labour of love</a></li>
             <li class="nav-item"><a class="nav-link" href="/contrib">supporting acts</a></li>
-            <li class="nav-item"><a class="nav-link" href="/archive">post it, notes</a></li>
+            <li class="nav-item"><a class="nav-link" href="/post">post it, notes</a></li>
             <li class="nav-item"><a class="nav-link" href="/tweet">reflected tweets</a></li>
         </ul>
     </nav>
