--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>CV - $title$</title>
-        <link rel="stylesheet" href="/css/styles.css" >
+        <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
         <script type="text/javascript">
