--- a/www-hakyll/templates/default.html
+++ b/www-hakyll/templates/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>$title$</title>
-        <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="/css/app.css" />
         $partial("templates/favicon.html")$
     </head>
     <body>
