--- a/www-hakyll/templates/philderbeast.html
+++ b/www-hakyll/templates/philderbeast.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>About $title$</title>
-        <link rel="stylesheet" href="/css/styles.css" >
+        <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
     </head>
     <body>
