Use black for the project, the 13th of 12 colours.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -32,7 +32,12 @@
                     ,
                         [ 'Flare Timing'
                         , new Date(2019, 10,  7)
-                        , new Date(2019, 11)
+                        , new Date(2019, 11,  1)
+                        ]
+                    ,
+                        [ 'Flare Timing'
+                        , new Date(2020,  3,  5)
+                        , new Date(2020,  4, 10)
                         ]
                     ,   [ 'Aqualinc'
                         , new Date(2014,  2, 18)
@@ -235,7 +240,7 @@
                     hAxis: { maxValue: Date.now() },
                     // SEE: http://colorbrewer2.org/#type=qualitative&scheme=Paired&n=12
                     colors: [
-                          '#b15928'
+                          '#000000'
                         , '#a6cee3'
                         , '#1f78b4'
                         , '#b2df8a'
