Change the colors, avoiding yellow appearing twice.

--- a/app.sass
+++ b/app.sass
@@ -36,40 +36,40 @@ body
         margin-bottom: 1.5cm;
         margin-left: 2cm
 
-.aqualinc
+.flaretiming, .sml
     color: #a6cee3;
 
-.tagly
+.aqualinc, .trimble
     color: #1f78b4;
 
-.apress
+.cactus
     color: #b2df8a;
 
-.travieo
+.tagly
     color: #33a02c;
 
-.croplogic
+.apress
     color: #fb9a99;
 
-.waimak
+.travieo
     color: #e31a1c;
 
-.nutricentre
+.croplogic
     color: #fdbf6f;
 
-.niwa
+.waimak
     color: #ff7f00;
 
-.aspelle
+.nutricentre
     color: #cab2d6;
 
-.obvious
+.niwa
     color: #6a3d9a;
 
-.sml
+.aspelle
     color: #ffff99;
 
-.trimble
+.obvious
     color: #b15928;
 
 #work-history > ul
