--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -236,7 +236,6 @@
                     ]);
 
                 var options = {
-                    backgroundColor: '#fffff8',
                     timeline: {
                         rowLabelStyle: { fontName: 'monospace', fontSize: 10 },
                         barLabelStyle: { fontName: 'monospace', fontSize: 10 }
@@ -244,9 +243,7 @@
                     hAxis: { maxValue: Date.now() },
                     // SEE: http://colorbrewer2.org/#type=qualitative&scheme=Paired&n=12
                     colors: [
-                          '#000000'
-                        , '#a6cee3'
-                        , '#000000'
+                          '#a6cee3'
                         , '#1f78b4'
                         , '#b2df8a'
                         , '#33a02c'
