--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -263,7 +263,7 @@
         </script>
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
