--- a/www-hakyll/templates/default.html
+++ b/www-hakyll/templates/default.html
@@ -11,7 +11,7 @@
         $partial("templates/favicon.html")$
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div id="side" class="col-3 card">
                     $partial("templates/nav.html")$
