--- a/www-hakyll/templates/project.html
+++ b/www-hakyll/templates/project.html
@@ -7,7 +7,7 @@
         $partial("templates/favicon.html")$
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
                 <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
