--- a/www-hakyll/templates/post-list.html
+++ b/www-hakyll/templates/post-list.html
@@ -1,7 +1,11 @@
 <ul>
     $for(posts)$
         <li>
-            <a href="$url$">$title$</a> - $date$
+            $if(slug)$
+            $date$ <a href="$url$">$slug$</a>
+            $else$
+            $date$ <a href="$url$">$title$</a>
+            $endif$
         </li>
     $endfor$
 </ul>
