Use typeface-et-book and et-book font in articles.

--- a/app.sass
+++ b/app.sass
@@ -6,10 +6,18 @@ $fa-font-path: "~font-awesome/fonts";
 
 $body-bg: #fffff8;
 @import "~bootstrap/scss/bootstrap";
+@import "~typeface-et-book/et-book/et-book.css";
 
 body
     font-family: 'B612 Mono', monospace;
     margin: 2.5rem;
+
+article
+    font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+    font-size: 1.2rem;
+
+.sourceCode
+    font-size: 0.9rem;
 
 .spacer
     height: 20px;
