Don't use the jumbotron.

--- a/app.sass
+++ b/app.sass
@@ -12,6 +12,13 @@ body
     font-family: 'B612 Mono', monospace;
     margin: 2.5rem;
 
+.post-hdr
+    border-left: #b58900 dashed;
+    padding-left: 1rem;
+
+.post-hdr > p
+    color: #b58900;
+
 article
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     font-size: 1.2rem;
