--- a/www-hakyll/templates/post.html
+++ b/www-hakyll/templates/post.html
@@ -1,6 +1,6 @@
 <article>
 <header>
-    <div class="jumbotron">
+    <div class="post-hdr">
         <h1 class="display-4">$title$</h1>
         $if(subtitle)$
         <p class="lead">$subtitle$</p>
