--- a/app.sass
+++ b/app.sass
@@ -13,11 +13,11 @@ body
     margin: 2.5rem;
 
 .post-hdr
-    border-left: #b58900 dashed;
+    border-left: #6c757d dashed;
     padding-left: 1rem;
 
 .post-hdr > p
-    color: #b58900;
+    color: #6c757d;
 
 article
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
