--- a/www-hakyll/templates/post.html
+++ b/www-hakyll/templates/post.html
@@ -1,11 +1,30 @@
 <article>
 <header>
-    <div class="post-hdr">
-        <h1 class="display-4">$title$</h1>
-        $if(subtitle)$
-        <p class="lead">$subtitle$</p>
-        $endif$
-    </div>
+    <table>
+        <tbody>
+            <tr>
+            <td style="padding-right: 1rem">
+<pre class="sourceCode pre">
+<code>
++
+|
+|
+|
+|
++
+</code>
+</pre>
+            </td>
+            <td>
+                <div>
+                    <h1 class="display-4">$title$</h1>
+                    $if(subtitle)$
+                    <p class="lead">$subtitle$</p>
+                    $endif$
+                </div>
+            </td>
+        </tbody>
+    </table>
 </header>
     $if(tags)$
         <div class="float-right">
