Use a plainer ascii style for badges.

--- a/app.sass
+++ b/app.sass
@@ -12,6 +12,20 @@ body
     font-family: 'B612 Mono', monospace;
     margin: 2.5rem;
 
+.badge
+    font-family: 'B612 Mono', monospace;
+    font-size: 0.8rem;
+    font-weight: 300;
+
+.badge:before
+    content: "["
+
+.badge:after
+    content: "]"
+
+.badge.badge-light
+    background-color: transparent;
+
 article
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     font-size: 1.2rem;
