Style the copyright.

--- a/app.sass
+++ b/app.sass
@@ -12,6 +12,10 @@ body
     font-family: 'B612 Mono', monospace;
     margin: 2.5rem;
 
+#copyright
+    font-size: 0.8rem;
+    font-weight: 300;
+
 .badge
     font-family: 'B612 Mono', monospace;
     font-size: 0.8rem;
