Add title and subtitle to every page.

--- a/www-hakyll/templates/nav.html
+++ b/www-hakyll/templates/nav.html
@@ -2,13 +2,13 @@
     $partial("templates/banner.html")$
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
-            <li class="nav-item"><a class="nav-link" href="/b">@blockscope</a></li>
-            <li class="nav-item"><a class="nav-link" href="/cv">worker threads</a></li>
-            <li class="nav-item"><a class="nav-link" href="/project">labour of love</a></li>
-            <li class="nav-item"><a class="nav-link" href="/contrib">supporting acts</a></li>
             <li class="nav-item"><a class="nav-link" href="/post">post it, notes</a></li>
+            <li class="nav-item"><a class="nav-link" href="/project">fly the course</a></li>
+            <li class="nav-item"><a class="nav-link" href="/contrib">supporting acts</a></li>
             <li class="nav-item"><a class="nav-link" href="/tweet">reflected tweets</a></li>
+            <li class="nav-item"><a class="nav-link" href="/b">@blockscope</a></li>
+            <li class="nav-item"><a class="nav-link" href="/p">@philderbeast</a></li>
+            <li class="nav-item"><a class="nav-link" href="/cv">worker threads</a></li>
         </ul>
     </nav>
 </div>
