Make the ascii header a partial.

--- a/www-hakyll/templates/index.html
+++ b/www-hakyll/templates/index.html
@@ -1,30 +1,4 @@
 <article>
-<header>
-    <table>
-        <tbody>
-            <tr>
-            <td style="padding-right: 1rem">
-<pre class="sourceCode pre">
-<code>
-+
-|
-|
-|
-|
-+
-</code>
-</pre>
-            </td>
-            <td>
-                <div>
-                    <h1 class="display-4">$title$</h1>
-                    $if(subtitle)$
-                    <p class="lead">$subtitle$</p>
-                    $endif$
-                </div>
-            </td>
-        </tbody>
-    </table>
-</header>
+    $partial("templates/header.html")$
     $body$
 </article>
