--- a/www-hakyll/templates/tag.html
+++ b/www-hakyll/templates/tag.html
@@ -1,6 +1,4 @@
 <article>
-<header>
-    <h1>$title$</h1>
-</header>
+    $partial("templates/header.html")$
     $partial("templates/post-list.html")$
 </article>
