Add a tag-header template.

--- a/www-hakyll/templates/tag.html
+++ b/www-hakyll/templates/tag.html
@@ -1,4 +1,10 @@
 <article>
-    $partial("templates/header.html")$
+    $partial("templates/tag-header.html")$
     $partial("templates/post-list.html")$
 </article>
+<section class="footnotes">
+<hr>
+<ol>
+<li id="fn1"><p>From The Earth to the Moon - <a href="https://www.youtube.com/watch?v=dfdZO6-d-0Q">That's all there is</a>.<a href="#fnref1" class="footnote-back">↩</a></p></li>
+</ol>
+</section>
