Show shell sessions with black background.

--- a/app.sass
+++ b/app.sass
@@ -34,8 +34,17 @@ article
     font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     font-size: 1.2rem;
 
-.sourceCode
+.sourceCode, .pre
     font-size: 0.9rem;
+
+.sourceCode.pre
+    color: #000;
+    background-color: transparent;
+
+.pre
+    color: #fff;
+    background-color: #000;
+    padding: 1rem;
 
 .spacer
     height: 20px;
