Add "breakage at every release" quote.

--- a/app.sass
+++ b/app.sass
@@ -56,6 +56,22 @@ article
     text-decoration: none;
     color: #000;
 
+blockquote
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 40px;
+    margin-inline-end: 40px;
+
+blockquote footer
+    display: block;
+    font-size: 1.1rem;
+    text-align: right;
+    margin-inline-end: 40px;
+
+blockquote footer:before
+    content: "— "
+
 #side
     background-color: inherit;
     border: inherit;
