Change the font on the timeline chart.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -237,8 +237,8 @@
 
                 var options = {
                     timeline: {
-                        rowLabelStyle: { fontName: 'monospace', fontSize: 10 },
-                        barLabelStyle: { fontName: 'monospace', fontSize: 10 }
+                        rowLabelStyle: { fontName: "'B612 Mono', monospace", fontSize: 10 },
+                        barLabelStyle: { fontName: "'B612 Mono', monospace", fontSize: 10 }
                     },
                     hAxis: { maxValue: Date.now() },
                     // SEE: http://colorbrewer2.org/#type=qualitative&scheme=Paired&n=12
