Hide the #side panel for print.

--- a/app.sass
+++ b/app.sass
@@ -87,6 +87,10 @@ blockquote footer:before
         margin-bottom: 1.5cm;
         margin-left: 2cm
 
+@media print
+    #side
+        display: none;
+
 .flaretiming, .sml
     color: #a6cee3;
 
