--- a/www-hakyll/templates/default.html
+++ b/www-hakyll/templates/default.html
@@ -13,7 +13,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card">
+                <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
                 </div>
                 <div class="col-9">
