--- a/www-hakyll/templates/default.html
+++ b/www-hakyll/templates/default.html
@@ -16,7 +16,7 @@
                 <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
                 </div>
-                <div class="col-9">
+                <div id="content" class="d-print-col-12">
                     $body$
                 </div>
             </div>
