Publish plug-out post.

--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -268,7 +268,7 @@
                 <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
                 </div>
-                <div class="col-9">
+                <div id="content">
                     $body$
                     <hr/>
                     <footer>
