--- a/www-hakyll/templates/blockscope.html
+++ b/www-hakyll/templates/blockscope.html
@@ -9,10 +9,10 @@
     <body>
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card">
+                <div id="side" class="col-3 card d-print-none">
                     $partial("templates/nav.html")$
                 </div>
-                <div class="col-9">
+                <div id="content">
                     $body$
                     <hr/>
                     <footer>
