Font size for print as 12pt.

--- a/app.sass
+++ b/app.sass
@@ -84,7 +84,7 @@ blockquote footer:before
 
 @media print
     body
-        font-size: 1em;
+        font-size: 12pt;
         margin-top: 2cm;
         margin-right: 2cm;
         margin-bottom: 1.5cm;
