--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CV - $title$</title>
         <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
