--- a/www-hakyll/templates/blockscope.html
+++ b/www-hakyll/templates/blockscope.html
@@ -3,7 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About $title$</title>
+        $partial("templates/meta.html")$
+        <title>Block Scope - Fresh coding and untangling knotty codebases.</title>
         <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
     </head>
