--- a/www-hakyll/templates/philderbeast.html
+++ b/www-hakyll/templates/philderbeast.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        $partial("templates/meta.html")$
         <title>About $title$</title>
         <link rel="stylesheet" href="/css/app.css" >
         $partial("templates/favicon.html")$
