Make the cv more compact for opera save as pdf.

--- a/app.sass
+++ b/app.sass
@@ -83,6 +83,9 @@ blockquote footer:before
 #content
     @extend .col-9;
 
+#content-cv
+    @extend .col-12;
+
 @media print
     body
         font-size: 12pt;
