--- a/www-hakyll/templates/cv.html
+++ b/www-hakyll/templates/cv.html
@@ -267,10 +267,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card d-print-none">
-                    $partial("templates/nav.html")$
-                </div>
-                <div id="content">
+                <div id="content-cv">
                     $body$
                     <hr/>
                     <footer>
